--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
         if (enableADS){
             gtmID = 'GTM-W4F73N'; //
 			productKey = "jellimonFree";
-			var adsSDK_url = '//github.com/xnls0711/xnls0711.github.io/blob/master/adsSDK.js';
+			var adsSDK_url = '//cdn.ludigames.com/h5ads/js/games_lib/adsSDK/adsSDK.js';
 			var adsSDK_gameConfigUrl = '//cdn.ludigames.com/h5ads/js/games_lib/adsSDK/game_config.js';
 			var ima3Url = '//imasdk.googleapis.com/js/sdkloader/ima3.js';
         }
