--- a/index.html
+++ b/index.html
@@ -17,6 +17,11 @@
   <meta name="description" content="JellimonFree-Gameloft" />
   <meta name="robots" content="index,follow" />
   <meta name="title" content="Jellimon" />
+	
+  <meta property="og:url"                content="https://xnls0711.github.io/" />
+  <meta property="og:title"              content="Jellimon" />
+  <meta property="og:description"        content="Jellimon-Gameloft-Free" />
+  <meta property="og:image"              content="https://xnls0711.github.io/Splash_960x640.png" />
 
   <!-- force webkit on 360 -->
   <meta name="renderer" content="webkit"/>
