--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   <meta property="og:url"                content="https://xnls0711.github.io/" />
   <meta property="og:title"              content="Jellimon" />
   <meta property="og:description"        content="Jellimon-Gameloft-Free" />
-  <meta property="og:image"              content="https://xnls0711.github.io/Splash_960x640.png" />
+  <meta property="og:image"              content="Splash_960x640.png" />
 
   <!-- force webkit on 360 -->
   <meta name="renderer" content="webkit"/>
