--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <meta charset="utf-8">
-<!--  Open Graph Tags Generator for Blogger: https://bit.ly/30tJixf -->
+
   <title>Jellimon</title>
 
   <!--http://www.html5rocks.com/en/mobile/mobifying/-->
@@ -14,15 +14,15 @@
   <meta name="format-detection" content="telephone=no">
 
   <meta name="keywords" content="" />
-  <meta name="description" content="JellimonFree-Gameloft" />
+  <meta name="description" content="" />
   <meta name="robots" content="index,follow" />
   <meta name="title" content="Jellimon" />
-	
-  <meta property="og:url"                content="https://xnls0711.github.io/" />
+  
+   <meta property="og:url"                content="https://xnls0711.github.io/" />
   <meta property="og:title"              content="Jellimon" />
-  <meta property="og:description"        content="Jellimon-Gameloft-Free" />
+  <meta property="og:description"        content="JellimonFree" />
   <meta property="og:image"              href="Splash_960x640.png" />
-
+  
   <!-- force webkit on 360 -->
   <meta name="renderer" content="webkit"/>
   <meta name="force-rendering" content="webkit"/>
