--- a/index.html
+++ b/index.html
@@ -50,10 +50,11 @@
   <link rel="apple-touch-icon" href="favicon.png">
   <link rel="apple-touch-startup-image" href="favicon.png">
   
-  <!--laucher icon in manifest -->
-  <link rel="manifest" href="manifest.json">
+  <!--laucher icon in manifest
+  <link rel="manifest" href="manifest.json"> -->
   <meta charset="utf-8">
 	<!-- All global variable should be here -->
+	<script src="../js/games_lib/headScript.js" charset="utf-8"></script>
     <script type='text/javascript'>
         var enableADS = true;
         var useZipLib = true;
