--- a/index.html
+++ b/index.html
@@ -17,7 +17,11 @@
   <meta name="description" content="" />
   <meta name="robots" content="index,follow" />
   <meta name="title" content="Jellimon" />
-
+  
+  <meta property="og:url"                content="https://xnls0711.github.io/" />
+  <meta property="og:description"        content="Join the Jellimon" />
+  <meta property="og:image"              href="Splash_960x640.png" />
+  
   <!-- force webkit on 360 -->
   <meta name="renderer" content="webkit"/>
   <meta name="force-rendering" content="webkit"/>
