--- a/index.html
+++ b/index.html
@@ -18,7 +18,9 @@
   <meta name="robots" content="index,follow" />
   <meta name="title" content="Jellimon" />
   
-  <meta property="og:description"        content="Join the Jellimon" />
+  <meta property="og:url"                content="https://xnls0711.github.io/" />
+  <meta property="og:title"              content="Jellimon" />
+  <meta property="og:description"        content="JellimonFree" />
   <meta property="og:image"              href="Splash_960x640.png" />
   
   <!-- force webkit on 360 -->
